[WLP-11] - Finish location retrieval functionality. Add `request` dependency
